--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #hibernate settings
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.format_sql=false
 
 #dbcp settings
@@ -29,4 +29,4 @@ activiti.version=${activiti.version}
 
 #\u7f13\u5b58\u56fe\u7247:http://www.kafeitu.me/activiti/2013/02/14/improve-performance-for-reading-diagram.html
 export.diagram.path=/tmp/kft-activiti-demo
-diagram.http.url=http://localhost:10000
+diagram.http.url=http\://localhost\:10000
