--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,12 +10,12 @@ log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 log4j.logger.me.kafeitu.demo=DEBUG
 
 #spring default level
-log4j.logger.org.springframework=INFO
+log4j.logger.org.springframework=DEBUG
 
 #hibernate default level
-log4j.logger.org.hibernate=ERROR
+log4j.logger.org.hibernate=DEBUG
 
 #apache
-log4j.logger.org.apache=ERROR
+log4j.logger.org.apache=DEBUG
 
-log4j.logger.net.sf.ehcache=ERROR
+log4j.logger.net.sf.ehcache=DEBUG
