--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 
 	<display-name>kft-activiti-demo</display-name>
 
-	<!-- Spring ApplicationContext配置文件的路径,可使用通配符,多个路径用,号分隔 此参数用于后面的Spring Context Loader -->
+	<!--
+		Spring ApplicationContext配置文件的路径,可使用通配符,多个路径用,号分隔 此参数用于后面的Spring
+		Context Loader
+	-->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:/applicationContext.xml
+			classpath*:/applicationContext.xml,
+			classpath*:/applicationContext-shiro.xml
 		</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>spring.profiles.default</param-name>
+		<param-value>production</param-value>
 	</context-param>
 
 	<!--Spring的ApplicationContext 载入 -->
@@ -27,8 +37,10 @@
 		<servlet-name>PropertiesServlet</servlet-name>
 		<url-pattern>/properties-servlet</url-pattern>
 	</servlet-mapping>
-	
-	<!-- Restlet adapter, used to expose modeler functionality through REST -->
+
+	<!--
+		Restlet adapter, used to expose modeler functionality through REST
+	-->
 	<servlet>
 		<servlet-name>RestletServlet</servlet-name>
 		<servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
@@ -40,6 +52,29 @@
 	</servlet>
 
 	<!-- Filter 定义 -->
+		<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/quickstart/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>sitemeshFilter</filter-name>
+		<filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>sitemeshFilter</filter-name>
+		<url-pattern>/quickstart/*</url-pattern>
+	</filter-mapping>
+
+
 	<!-- Character Encoding filter -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -57,6 +92,7 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
 
 	<!-- Open Entity Manager in View filter -->
 	<filter>
@@ -82,7 +118,7 @@
 		<servlet-name>springServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
+
 	<!-- Catch all service requests -->
 	<servlet-mapping>
 		<servlet-name>RestletServlet</servlet-name>
@@ -94,7 +130,13 @@
 		<session-timeout>20</session-timeout>
 	</session-config>
 
-	<!-- 出错页面定义 <error-page> <exception-type>java.lang.Throwable</exception-type> <location>/WEB-INF/views/error/500.jsp</location> </error-page> 
-		<error-page> <error-code>500</error-code> <location>/WEB-INF/views/error/500.jsp</location> </error-page> <error-page> <error-code>404</error-code> 
-		<location>/WEB-INF/views/error/404.jsp</location> </error-page> -->
+	<!--
+		出错页面定义 <error-page>
+		<exception-type>java.lang.Throwable</exception-type>
+		<location>/WEB-INF/views/error/500.jsp</location> </error-page>
+		<error-page> <error-code>500</error-code>
+		<location>/WEB-INF/views/error/500.jsp</location> </error-page>
+		<error-page> <error-code>404</error-code>
+		<location>/WEB-INF/views/error/404.jsp</location> </error-page>
+	-->
 </web-app>
