spring 集成quartz 动态调整任务/时间功能调试完毕

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 	<!-- 依赖项定义 -->
 
 	<dependencies>
+		<dependency> 
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>1.8.6</version>
+        </dependency>
 		<dependency>
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
