--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Output pattern : date [thread] priority category - message
-log4j.rootLogger=DEBUG, Console
+log4j.rootLogger=INFO, Console
 
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
@@ -7,15 +7,15 @@ log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 #Project defalult level
-log4j.logger.me.kafeitu.demo=DEBUG
+log4j.logger.me.kafeitu.demo=INFO
 
 #spring default level
-log4j.logger.org.springframework=DEBUG
+log4j.logger.org.springframework=INFO
 
 #hibernate default level
-log4j.logger.org.hibernate=DEBUG
+log4j.logger.org.hibernate=INFO
 
 #apache
-log4j.logger.org.apache=DEBUG
+log4j.logger.org.apache=INFO
 
-log4j.logger.net.sf.ehcache=DEBUG
+log4j.logger.net.sf.ehcache=INFO
