--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath*:/applicationContext.xml,
-			classpath*:/applicationContext-shiro.xml,
+			
 			classpath*:/applicationContext-quartz.xml
 		</param-value>
 	</context-param>
@@ -73,18 +73,18 @@
 
 
 	<!-- Filter 定义 -->
-		<filter>
-		<filter-name>shiroFilter</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		<init-param>
-			<param-name>targetFilterLifecycle</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>shiroFilter</filter-name>
-		<url-pattern>/quickstart/*</url-pattern>
-	</filter-mapping>
+<!--		<filter>-->
+<!--		<filter-name>shiroFilter</filter-name>-->
+<!--		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+<!--		<init-param>-->
+<!--			<param-name>targetFilterLifecycle</param-name>-->
+<!--			<param-value>true</param-value>-->
+<!--		</init-param>-->
+<!--	</filter>-->
+<!--	<filter-mapping>-->
+<!--		<filter-name>shiroFilter</filter-name>-->
+<!--		<url-pattern>/quickstart/*</url-pattern>-->
+<!--	</filter-mapping>-->
 
 	<filter>
 		<filter-name>sitemeshFilter</filter-name>
