--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ sql.type=mysql
 
 #jdbc mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.8.86:3306/pms?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/pms?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=gboat
+jdbc.password=root
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #hibernate settings
